# Networks_Final_GetMyMusic

./: .gitignore  CMakeLists.txt  HappyPathJSON.cpp  HappyPathJSON.h  Makefile  MessageTester  MyJSON.cpp  MyJSON.h  OfflineTester.cpp  Project4Client.cpp  Project4Common.cpp  Project4Common.h  Project4Server.cpp  architecture.md  instructions.html  jsonSpec.txt  select_test.sh
lib/: CCRC32.cpp
src/: Base64Tester.cpp  CMakeLists.txt  CRC32.cpp  CRC32.h  HappyPathJSON.cpp  HappyPathJSON.h  JSONTest.cpp  Message.cpp  Message.h  MessageTester.cpp  OfflineTester.cpp  Project4Client.cpp  Project4Common.cpp  Project4Common.h  Project4Server.cpp
src/lib/: CCRC32.cpp  CCRC32.h  CRC32.cpp  CRC32.h
testBackupDir/client/: sameName.txt
testBackupDir/server/: sameName.txt
testServerDir/: blob.binary
tests/: Base64Tester.cpp  CRCTester.cpp  JSONTest.cpp  MessageTester.cpp  OfflineTester.cpp
tests/lib/: CRC32.cpp  CRC32.h
